# dev-assistant

./: LICENSE  README.md
backend/: .env  Cargo.toml
backend/src/: app.rs  main.rs
backend/src/config/: mod.rs  prompts.rs
backend/src/handlers/: chat_handler.rs  mod.rs
backend/src/models/: mistral.rs
backend/src/routes/: chat.rs  mod.rs
backend/src/services/: mistral_service.rs  mod.rs
